--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>No Matter Game</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9.5/brython.min.js"></script>
     <style>
-        body { text-align: center; margin: 0; padding: 0; background-color: black; color: white; }
-        canvas { border: 1px solid white; background-color: black; display: block; margin: 20px auto; }
+        body { text-align: center; background-color: black; color: white; }
+        canvas { border: 1px solid white; display: block; margin: 20px auto; }
         .title { font-family: 'Press Start 2P', cursive; color: #00FF00; margin: 20px; }
-        .instructions { font-family: 'Press Start 2P', cursive; color: #FFFFFF; position: absolute; left: 10px; top: 150px; text-align: left; }
+        .instructions { font-family: 'Press Start 2P', cursive; color: #FFFFFF; text-align: left; }
         @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
     </style>
 </head>
 <body onload="brython()">
-    <div class="title">No Matter Game</div>
+    <h1 class="title">No Matter Game</h1>
     <div class="instructions">
         <p>Instructions:</p>
         <p>Move = Arrow Keys</p>
@@ -26,7 +26,6 @@
         from browser import document, html, window, timer
         import random
 
-        # Constants
         WIDTH, HEIGHT = 800, 600
         PLAYER_SIZE = 50
         ENEMY_SIZE = 50
@@ -36,24 +35,17 @@
         ENEMY_BULLET_SPEED = 2
         ENEMY_SPEED = 2
 
-        # Game variables
         score = 0
         game_over = False
 
-        # Player position
         player_pos = [WIDTH // 2, HEIGHT - 2 * PLAYER_SIZE]
 
-        # Load spaceship image
         spaceship_img = html.IMG(src="spaceship.png")
-
-        # Load enemy images
         face_images = ["face_0.png", "face_1.png", "face_2.png", "face_3.png"]
         faces = [html.IMG(src=img) for img in face_images]
 
-        # Enemy positions
         enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": random.choice(faces)} for row in range(3) for col in range(8)]
 
-        # Bullets
         bullets = []
         enemy_bullets = []
 
@@ -62,17 +54,13 @@
 
         def draw():
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
-            # Draw player
             if not game_over:
                 ctx.drawImage(spaceship_img, player_pos[0], player_pos[1], PLAYER_SIZE, PLAYER_SIZE)
-            # Draw enemies
             for enemy in enemies:
                 ctx.drawImage(enemy["img"], enemy["pos"][0], enemy["pos"][1], ENEMY_SIZE, ENEMY_SIZE)
-            # Draw bullets
             ctx.fillStyle = "yellow"
             for bullet in bullets:
                 ctx.fillRect(bullet[0], bullet[1], BULLET_SIZE, BULLET_SIZE)
-            # Draw enemy bullets
             ctx.fillStyle = "red"
             for bullet in enemy_bullets:
                 ctx.fillRect(bullet[0], bullet[1], BULLET_SIZE, BULLET_SIZE)
@@ -83,19 +71,16 @@
             if game_over:
                 return
 
-            # Move bullets
             for bullet in bullets[:]:
                 bullet[1] -= BULLET_SPEED
                 if bullet[1] < 0:
                     bullets.remove(bullet)
 
-            # Move enemy bullets
             for bullet in enemy_bullets[:]:
                 bullet[1] += ENEMY_BULLET_SPEED
                 if bullet[1] > HEIGHT:
                     enemy_bullets.remove(bullet)
 
-            # Check for bullet collisions with enemies
             for enemy in enemies[:]:
                 for bullet in bullets[:]:
                     if bullet[0] >= enemy["pos"][0] and bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and bullet[1] >= enemy["pos"][1] and bullet[1] <= enemy["pos"][1] + ENEMY_SIZE:
@@ -105,12 +90,10 @@
                         document["score"].text = str(score)
                         break
 
-            # Check for enemy bullet collisions with player
             for bullet in enemy_bullets[:]:
                 if bullet[0] >= player_pos[0] and bullet[0] <= player_pos[0] + PLAYER_SIZE and bullet[1] >= player_pos[1] and bullet[1] <= player_pos[1] + PLAYER_SIZE:
                     game_over = True
 
-            # Move enemies
             move_down = False
             for enemy in enemies:
                 enemy["pos"][0] += ENEMY_SPEED
@@ -121,7 +104,6 @@
                     enemy["pos"][1] += ENEMY_SIZE
                 ENEMY_SPEED = -ENEMY_SPEED
 
-            # Enemies fire bullets occasionally
             for enemy in enemies:
                 if random.random() < 0.01:
                     enemy_bullets.append([enemy["pos"][0] + ENEMY_SIZE // 2, enemy["pos"][1] + ENEMY_SIZE])
@@ -143,3 +125,4 @@
     </script>
 </body>
 </html>
+
