--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 ctx.fillRect(bullet[0], bullet[1], BULLET_SIZE, BULLET_SIZE)
 
         def update():
-            global game_over, score
+            global game_over, score, ENEMY_SPEED
 
             if game_over:
                 return
