--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         PLAYER_SPEED = 10
         BULLET_SPEED = 5
         ENEMY_SPEED = 2
+        ENEMY_BULLET_SPEED = 3
 
         score = 0
         game_over = False
@@ -39,6 +40,7 @@
         enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(3) for col in range(8)]
 
         bullets = []
+        enemy_bullets = []
 
         canvas = document["game-canvas"]
         ctx = canvas.getContext("2d")
@@ -61,6 +63,9 @@
                 ctx.fillStyle = "yellow"
                 for bullet in bullets:
                     ctx.fillRect(bullet[0], bullet[1], BULLET_SIZE, BULLET_SIZE)
+                ctx.fillStyle = "red"
+                for bullet in enemy_bullets:
+                    ctx.fillRect(bullet[0], bullet[1], BULLET_SIZE, BULLET_SIZE)
                 if game_over:
                     ctx.fillStyle = "red"
                     ctx.font = "48px 'Press Start 2P'"
@@ -77,6 +82,11 @@
                 if bullet[1] < 0:
                     bullets.remove(bullet)
 
+            for bullet in enemy_bullets[:]:
+                bullet[1] += ENEMY_BULLET_SPEED
+                if bullet[1] > HEIGHT:
+                    enemy_bullets.remove(bullet)
+
             for enemy in enemies[:]:
                 for bullet in bullets[:]:
                     if bullet[0] >= enemy["pos"][0] and bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and bullet[1] >= enemy["pos"][1] and bullet[1] <= enemy["pos"][1] + ENEMY_SIZE:
@@ -84,6 +94,10 @@
                         bullets.remove(bullet)
                         score += 1
                         break
+
+            for bullet in enemy_bullets[:]:
+                if bullet[0] >= player_pos[0] and bullet[0] <= player_pos[0] + PLAYER_SIZE and bullet[1] >= player_pos[1] and bullet[1] <= player_pos[1] + PLAYER_SIZE:
+                    game_over = True
 
             move_down = False
             for enemy in enemies:
@@ -94,6 +108,11 @@
                 for enemy in enemies:
                     enemy["pos"][1] += ENEMY_SIZE
                 ENEMY_SPEED = -ENEMY_SPEED
+
+            # Enemies fire bullets occasionally
+            for enemy in enemies:
+                if window.Math.random() < 0.01:
+                    enemy_bullets.append([enemy["pos"][0] + ENEMY_SIZE // 2, enemy["pos"][1] + ENEMY_SIZE])
 
             draw()
 
