--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
         BULLET_SIZE = 10
         PLAYER_SPEED = 10
         BULLET_SPEED = 5
+        ENEMY_SPEED = 2
         ENEMY_BULLET_SPEED = 3
-        MAX_LEVEL = 5
 
         score = 0
         game_over = False
         game_started = False
-        level = 1
         showing_level_title = False
 
         player_pos = [WIDTH // 2, HEIGHT - 2 * PLAYER_SIZE]
@@ -47,14 +46,13 @@
         ctx = canvas.getContext("2d")
 
         def reset_game():
-            global enemies, bullets, enemy_bullets, ENEMY_SPEED, showing_level_title
+            global enemies, bullets, enemy_bullets, showing_level_title
             enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(3) for col in range(8)]
             bullets = []
             enemy_bullets = []
-            ENEMY_SPEED = 2 + (level - 1)
             showing_level_title = True
             draw_level_title()
-            window.setTimeout(start_level, 1000)  # Show level title for 1 second
+            window.setTimeout(start_game, 1000)  # Show level title for 1 second
 
         def draw_start_screen():
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -66,7 +64,7 @@
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
             ctx.fillStyle = "white"
             ctx.font = "48px 'Press Start 2P'"
-            ctx.fillText(f"Level {level}", WIDTH // 2 - 100, HEIGHT // 2)
+            ctx.fillText("Level 1", WIDTH // 2 - 100, HEIGHT // 2)
 
         def draw():
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -89,17 +87,14 @@
                     ctx.fillStyle = "red"
                     ctx.font = "48px 'Press Start 2P'"
                     ctx.fillText("GAME OVER", WIDTH // 4, HEIGHT // 2)
-                if len(enemies) == 0:
-                    if level < MAX_LEVEL:
-                        level_up()
-                    else:
-                        ctx.fillStyle = "green"
-                        ctx.font = "48px 'Press Start 2P'"
-                        ctx.fillText("YOU WIN!", WIDTH // 4, HEIGHT // 2)
-                        game_over = True
+                if len(enemies) == 0 and not game_over:
+                    ctx.fillStyle = "green"
+                    ctx.font = "48px 'Press Start 2P'"
+                    ctx.fillText("YOU WIN!", WIDTH // 4, HEIGHT // 2)
+                    game_over = True
 
         def update():
-            global game_over, score, ENEMY_SPEED, game_started, showing_level_title
+            global game_over, score, game_started, showing_level_title
 
             if game_over or not game_started or showing_level_title:
                 return
@@ -145,15 +140,9 @@
                 if window.Math.random() < 0.05:  # Adjust the probability as needed
                     enemy_bullets.append([enemy["pos"][0] + ENEMY_SIZE // 2, enemy["pos"][1] + ENEMY_SIZE])
 
-        def level_up():
-            global level
-            level += 1
-            reset_game()
-
-        def start_level():
+        def start_game():
             global showing_level_title
             showing_level_title = False
-            reset_game()
 
         def move_player(event):
             global game_started
