--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             enemy_bullets = []
             showing_level_title = True
             draw_level_title()
-            window.setTimeout(start_game, 1000)  # Show level title for 1 second
+            window.set_timeout(start_game, 1000)  # Show level title for 1 second
 
         def draw_start_screen():
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -161,14 +161,13 @@
                     bullets.append([player_pos[0] + PLAYER_SIZE // 2 - BULLET_SIZE // 2, player_pos[1]])
 
         document.bind("keydown", move_player)
-        window.setInterval(update, 30)
-        window.setInterval(enemy_shoot, 1000)  # Enemy attempts to shoot every second
+        window.set_interval(update, 30)
+        window.set_interval(enemy_shoot, 1000)  # Enemy attempts to shoot every second
 
         draw_start_screen()  # Initial draw to show start screen
     </script>
 </body>
 </html>
-
 
 
 
